instructions.Instructions.scala.error
Compilation error:
Instructions:1: error: not found: value brushdown
brushdown();
^Instructions:9: error: not found: value brushup
brushup();
^