instructions.Instructions.scala.code
brushdown();
forward(2);
right();
forward(2);
right();
forward(2);
right();
forward();
brushup();
right();
forward();